--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flood Evacuation Dashboard</title>
-    <link rel="stylesheet" href="../docs/styles/dashboard.css">
+    <link rel="stylesheet" href="./styles/dashboard.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
@@ -19,16 +19,8 @@
     </header>
 
     <main>
-        <div class="data-info">
-            <div class="last-updated">
-                Last Updated: <span id="update-time">Loading...</span>
-            </div>
-            <div class="data-source" id="data-source">
-                Loading data source...
-            </div>
-            <div class="update-frequency">
-                Updates every 30 minutes
-            </div>
+        <div class="last-updated">
+            Last Updated: <span id="update-time">Loading...</span>
         </div>
         
         <div class="stats-container">
@@ -64,9 +56,9 @@
     </main>
 
     <footer>
-        <p>Powered by GitHub Pages | Data updates every 30 minutes</p>
+        <p>Data source: JKM Malaysia (Static Demo Data)</p>
     </footer>
 
-    <script src="../docs/js/dashboard.js"></script>
+    <script src="./js/dashboard.js"></script>
 </body>
 </html>
