--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flood Evacuation Dashboard</title>
-    <link rel="stylesheet" href="../docs/styles/dashboard.css">
+    <link rel="stylesheet" href="./styles/dashboard.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
@@ -59,6 +59,6 @@
         <p>Data source: JKM Malaysia (Static Demo Data)</p>
     </footer>
 
-    <script src="../docs/js/dashboard.js"></script>
+    <script src="./js/dashboard.js"></script>
 </body>
 </html>
